kritigoomer/app/globals.css
@import "tailwindcss";

:root {
  --background: #1F0E2F;
  --foreground: white;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-heading: var(--font-heading);
  --font-body: var(--font-body);
}

@media (prefers-color-scheme: light) {
  :root {
    --background: #967bae;
    --foreground: white;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-body);
}

nav {
  padding: 8px 24px;
  gap: 24px;
  margin-top: 32px;
  border-radius: 48px;
  background-color: rgba(255,255,255,0.1);
  border: 1px solid rgba(255,255,255,0.2);

  filter: url(/glassFilter.svg);

  color: white;
  text-shadow: 0 0 5px rgba(0,0,0,0.5);
}

nav:hover {
  box-shadow: 0 8px 32px rgba(0,0,0,0.3);
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  transition-duration: 0.3s;
}

nav:hover:dark {
  box-shadow: 0 8px 32px rgba(0,0,0,0.7);
}

button {
  display: flex;
  width: fit-content;
  padding: 0 16px 4px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 25;
  border: 1px solid rgba(255,255,255,0.2);
  background: rgba(255,255,255,0.1);
  font-size: larger;
  
  filter: url(/glassFilter.svg);

  color: white;
  text-shadow: 0 0 5px rgba(0,0,0,0.5);
}

button:hover {
  box-shadow: 0 8px 32px rgba(0,0,0,0.3);
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  color: #ffbac4;
}

